--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "format": "prettier --check ."
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.18",
     "clsx": "^2.1.0",
     "next": "14.1.0",
     "react": "^18",
@@ -24,12 +25,10 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "autoprefixer": "^10.0.1",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
-    "typescript": "^5",
     "@typescript-eslint/eslint-plugin": "^5.60.1",
     "@typescript-eslint/parser": "^5.60.1",
+    "autoprefixer": "^10.0.1",
+    "eslint": "^8.44.0",
     "eslint-config-next": "13.4.6",
     "eslint-config-prettier": "^8.8.0",
     "eslint-import-resolver-typescript": "^3.5.5",
@@ -39,9 +38,11 @@
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "eslint-plugin-storybook": "^0.6.15",
     "eslint-plugin-unused-imports": "3.0.0",
+    "husky": "^8.0.0",
     "lint-staged": "^13.2.3",
+    "postcss": "^8",
     "prettier": "^2.8.8",
-    "eslint": "^8.44.0",
-    "husky": "^8.0.0"
+    "tailwindcss": "^3.3.0",
+    "typescript": "^5"
   }
 }
