--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "test:type": "tsc --noEmit",
     "lint-staged": "lint-staged",
     "lint": "next lint -d src --ext .ts --ext .tsx --fix --quiet",
-    "format": "prettier --check ."
+    "format": "prettier --check .",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "@headlessui/react": "^1.7.18",
@@ -22,11 +24,19 @@
     "tailwind-merge": "^2.2.0"
   },
   "devDependencies": {
+    "@storybook/addon-essentials": "^7.6.10",
+    "@storybook/addon-interactions": "^7.6.10",
+    "@storybook/addon-links": "^7.6.10",
+    "@storybook/addon-onboarding": "^1.0.10",
+    "@storybook/blocks": "^7.6.10",
+    "@storybook/nextjs": "^7.6.10",
+    "@storybook/react": "^7.6.10",
+    "@storybook/test": "^7.6.10",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "@typescript-eslint/eslint-plugin": "^5.60.1",
-    "@typescript-eslint/parser": "^5.60.1",
+    "@typescript-eslint/eslint-plugin": "^6.19.0",
+    "@typescript-eslint/parser": "^6.19.0",
     "autoprefixer": "^10.0.1",
     "eslint": "^8.44.0",
     "eslint-config-next": "13.4.6",
@@ -42,6 +52,7 @@
     "lint-staged": "^13.2.3",
     "postcss": "^8",
     "prettier": "^2.8.8",
+    "storybook": "^7.6.10",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
