--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.18",
+    "chart.js": "^4.4.1",
     "clsx": "^2.1.0",
     "next": "14.1.0",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
     "tailwind-merge": "^2.2.0"
   },
@@ -35,9 +37,9 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "autoprefixer": "^10.0.1",
     "@typescript-eslint/eslint-plugin": "^5.60.1",
     "@typescript-eslint/parser": "^5.60.1",
+    "autoprefixer": "^10.0.1",
     "eslint": "^8.44.0",
     "eslint-config-next": "13.4.6",
     "eslint-config-prettier": "^8.8.0",
