--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "chart.js": "^4.4.1",
     "clsx": "^2.1.0",
     "next": "14.1.0",
+    "next-auth": "^4.22.1",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
-    "tailwind-merge": "^2.2.0"
+    "tailwind-merge": "^2.2.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@storybook/addon-essentials": "^7.6.10",
